<resources>
    <string name="app_name">UCC App</string>
    <string name="admission">Admissions</string>
    <string name="program_description">The Bachelor Degree in Information Technology includes a rounded academic curriculum complemented by practical work. Skills are taught in a context that makes them transferable to the job environment and students demonstrate their readiness by completing projects that solve real world problems. The content and focus of the programme are constantly informed by current practice in the field through a participatory approach that includes input from our students, faculty, and advisory board. The curriculum reflects what is pertinent in the information technology industry and is a rigorous course that balances professional competencies and academic abilities.\n\nThe programme aims to produce graduates who have the technical, business and interpersonal knowledge, skills, and competencies to make significant contributions within the information technology industry nationally, regionally and globally. Graduates of the bachelor programme are prepared for employment as computer programmers, systems analysts or network administrators.\n\nNOTE: Blended programmes like this will be delivered via both face-to-face and online synchronous sessions (read more on what is blended learning by clicking here). Many programmes will offer students the choice to select a course delivered either face-to-face or via synchronous online modality. Upon registration, please read registration instructions carefully so that you select the modality that you prefer based on the options that are available. Students who prefer a 100% asynchronous online modality should visit this page for more.</string>
    <string name="duration">UCC Bachelor of Science degree programmes are four-year programmes. This may be reduced by up to two years, if a student gains Advanced Standing with an appropriate Associate of Science degree or equivalent qualification.</string>
    <string name="inst_accreditation">University of the Commonwealth Caribbean is registered with and recognized as a University with the authority to offer academic degrees up to the Masters level. UCC has also been granted institutional accreditation. Students who successfully complete a University of the Commonwealth Caribbean academic degree are assured of graduating from an excellent academic programme, provided by an institutionally accredited institution, which will be accepted anywhere in the world.</string>
    <string name="entry_req">"To be unconditionally admitted to complete University of the Commonwealth Caribbean undergraduate programmes, individuals should possess a minimum of five (5) subjects at the GCE or CSEC level (including the mandatory English Language and Mathematics) at grades A, B, C or 1, 2, 3 respectively. A CSEC pass at level 3 must have been obtained since 1998. Candidates who have a minimum of 4 CXCs can also apply pending the outstanding CXC subjects or can opt to do UCC replacement courses Core Mathematics, English for Academic Purpose and Fundamentals of Accounting. Candidates can opt to apply under the Mature Entry option. To be accepted, applicants must be working for 5 years or more and be at a minimum age of 25 years. Academic qualifications, a detailed resume, a job letter and 3 professional references will be required."</string>
    <string name="honours_programme">Students with 8 CXC/GCE subjects including Mathematics and English Language at Grade 1 may be eligible for a 25% tuition waiver during the first year.</string>

    <string name="course_description_1">This course will introduce students to the core conceptual skills and basic practices needed to develop an Android application. The course will focus on how the application communicates to retrieve, store and interact with other devices on any android platform. Topics will include memory management, user interface design, user interface building, input methods, data handling, and network techniques.</string>
    <string name="course_description_2">This course is designed to provide an understanding of computer security and prepare students for the CompTIA Security+ exam. The course covers material related to general computer security concepts, communications security, infrastructure security, basics of cryptography and operational/organizational security. Students gain knowledge in basic cryptography, fundamentals of computer and network security, risks faced by computers and networks, security mechanisms, operating system security and secure systems design principles.</string>
    <string name="course_description_3">This course will introduce students to programming concepts. Students will learn proper programming design techniques, principles and basic programming concepts. The focus of the course is to develop the logics, structured design, tracing and testing techniques and rudiments of basic programming language. Programming techniques serves as the foundation course for all other programming courses.</string>
    <string name="course_description_4">This course exposes students to the development of desktop and internet applications using the popular C# language. Accordingly, students will be exposed to basic OOP concepts such as classes, inheritance and overloading. Additionally, basic programming concepts such as variable creation and manipulation, modularity and the use of control structures will be reviewed.</string>
    <string name="course_description_5">This course is aim to provide students with the basic functionality of the operating system and troubleshooting methodology, practice proper safety procedures and improve their skills in PC support and administration. By completing this course, students will also be assisted in the preparation of the technical support qualifications, CompTIA A+ Core 1 220–1001 exam.</string>
    <string name="course_description_6">This course is considered a Writing Intensive Course. Therefore, it is expected that each of the assignments will reflect all of the good aspects of report structuring, writing and presentation discussed in both this course and all communications courses.The course will be taught using lectures and seminars, which will focus on the advanced principles, theories and practices of systems analysis and design. The lectures will cover some of the advanced topics relative to the course, which students need to be familiar with in order to practice in the field. More advanced case studies will also be used to bring students closer to practical situations. In these case studies, students will be expected to present materials in simulation with real projects. The assignments may be based on advanced case material presented in the textbook(s) or other cases provided by the lecturer, at the lecturer’s discretion.</string>
    <string name="course_description_7">This course will introduce basic algorithms and data structures in computer science. It will also introduce students to the mathematical analysis of algorithms, and provide efficient programming techniques.</string>
    <string name="course_description_8">This introductory course in Java programming exposes the students to the fundamental concepts of using Java to develop written and well-structured object-oriented programmes that address real-world problems. Students are expected to already know programming in general and specific programming knowledge in an object-oriented environment.</string>
    <string name="course_description_9">This is an introductory course that allows students to format, calculate, and analyze data. The course will equip students with the skills needed to use a spreadsheet and python programs. Topics include numerical and graphical summaries of data, hypothesis testing, confidence intervals, counts and tables, analysis of variance, regression, principal components, and cluster analysis. Upon completion of this course, students should be able to think critically about data and apply standard statistical inference procedures to draw conclusions from such analyses.</string>
    <string name="course_description_10">This introductory course in Data Communications and Networks is designed to give students an understanding of networks and how they can be used in organizations to increase efficiency. It will also introduce IP addressing and subnets and briefly look at security issues in networking</string>
    <string name="top_ucc_app">Top Ucc App</string>
</resources>